syntax = "proto3";

import "google/protobuf/empty.proto";
import "common.proto";

option csharp_namespace = "Lykke.HftApi.ApiContract";

package hft;

service PrivateService {
	rpc GetBalances (google.protobuf.Empty) returns (BalancesResponse);
	rpc PlaceLimitOrder (LimitOrderRequest) returns (LimitOrderResponse);
	rpc PlaceMarketOrder (MarketOrderRequest) returns (MarketOrderResponse);
	rpc GetActiveOrders (OrdersRequest) returns (OrdersResponse);
	rpc GetClosedOrders (OrdersRequest) returns (OrdersResponse);
	rpc CancelAllOrders (CancelOrdersRequest) returns (CancelOrderResponse);
	rpc CancelOrder (CancelOrderRequest) returns (CancelOrderResponse);

    rpc GetBalanceUpdates (google.protobuf.Empty) returns (stream BalanceUpdate);
    rpc GetOrderUpdates (google.protobuf.Empty) returns (stream OrderUpdate);
    rpc GetTradeUpdates (google.protobuf.Empty) returns (stream TradeUpdate);
}

message LimitOrderRequest {
    string assetPairId = 1;
    Side side = 2;
    string volume = 3;
    string price = 4;
}

enum Side {
    buy = 0;
    sell = 1;
}

message MarketOrderRequest {
    string assetPairId = 1;
    Side side = 2;
    string volume = 3;
}

message OrdersRequest {
    string assetPairId = 1;
    bool withTrades = 2;
    string volume = 3;
    int32 offset = 4;
    int32 take = 5;
}

message CancelOrdersRequest {
    string assetPairId = 1;
    Side side = 2;
}

message CancelOrderRequest {
    string orderId = 1;
}

message BalancesResponse {
    repeated Balance payload = 1;
    hft.common.Error error = 2;
}

message LimitOrderResponse {
    LimitOrderPayload payload = 1;
    hft.common.Error error = 2;

    message LimitOrderPayload {
        string orderId = 1;
    }
}

message MarketOrderResponse {
    MarketOrderPayload payload = 1;
    hft.common.Error error = 2;

    message MarketOrderPayload {
        string orderId = 1;
        string price = 2;
    }
}

message OrdersResponse {
    repeated Order payload = 1;
    hft.common.Error error = 2;
}

message CancelOrderResponse {
    bool payload = 1;
    hft.common.Error error = 2;
}

message Balance {
    string AssetId = 1;
    string Available = 2;
    string Reserved = 3;
    string Timestamp = 4;
}

message Order {
    string id = 1;
    string timestamp = 2;
    string lastTradeTimestamp = 3;
    string status = 4;
    string assetPairId = 5;
    string type = 6;
    Side side = 7;
    string price = 8;
    string volume = 9;
    string filledVolume = 10;//> Volume - RemainingVolume;
    string remainingVolume = 11;
    string cost = 12;// FilledVolume * Price;
    repeated Trade Trades = 13;
}

message Trade {
    string id = 1;
    string walletId = 2;
    int32 index = 3;
    string Timestamp = 4;
    string assetPairId = 5;
    string orderId = 6;
    string oppositeOrderId = 7;
    string role = 8;
    string price = 9;
    string baseVolume = 10;
    string quoteVolume = 11;
    string baseAssetId = 12;
    string quoteAssetId = 13;
    TradeFee Fee = 14;
}

message TradeFee {
    string size = 1;
    string assetId = 2;
}

message BalanceUpdate {
    repeated Balance balances = 1;
}

message OrderUpdate {
    repeated Order orders = 1;
}

message TradeUpdate {
    repeated Trade trades = 1;
}
